fix header spacing

--- a/style.css
+++ b/style.css
@@ -364,16 +364,20 @@ header h2 {
   margin-top: 0.23rem;
 }
 
-.main-navbar-nav .nav-item:first-child {
+.main-navbar-nav .nav-item:first-child,
+.navbar-nav.icons .nav-item:first-child {
   margin-left: 0px;
 }
 
-.main-navbar-nav .nav-item:last-child {
+.main-navbar-nav .nav-item:last-child,
+.navbar-nav.icons .nav-item:last-child {
   margin-right: 0px;
 }
 
 .main-navbar-nav .nav-item:first-child a,
-.main-navbar-nav .nav-item:last-child a {
+.main-navbar-nav .nav-item:last-child a,
+.navbar-nav.icons .nav-item:first-child a,
+.navbar-nav.icons .nav-item:last-child a {
   padding-left: 0px;
   padding-right: 0px;
 }
